[package]
name = "backtrack-test-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
owo-colors = "3.5.0"
sevenz-rust = "0.5.3"
sha256 = { version = "1.4.0", default-features = false }
simplelog = "0.12.1"
terminal_size = "0.3.0"
thiserror = "1.0.50"
